[package]
name = "netlink-packet-xfrm"
version = "0.3.0"
authors = ["Scott Zuk <zooknotic@proton.me>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-packet-xfrm"
repository = "https://github.com/rust-netlink/netlink-packet-xfrm"
keywords = ["netlink", "linux", "ipsec", "xfrm"]
license = "MIT"
readme = "README.md"
description = "netlink xfrm packet types for IPsec"

[dependencies]
anyhow = "1.0.39"
byteorder = "1.4.2"
libc= "0.2.86"
netlink-packet-core = { version = "0.5.0" }
netlink-packet-utils = { version = "0.5.2" }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version ="0.5.1", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
netlink-proto = { version = "0.11.1" }
netlink-sys = { version = "0.8.4" }

[features]
serde = ["dep:serde", "dep:serde-big-array", "netlink-packet-utils/serde"]
